lab1/Test/L1-A-10-66.output
Error Type A at Line 16
Error Type B at Line 64
Error Type A at Line 69
