lab1/Test/L1-A-10-66.cmm
struct qnkquQeSHzrA {
};
struct n5gMO8Uq ;
int ;
int ;
int ac4LrUDgJWfcNfbQO ( struct x1cbfIiijB3roo0N22u 
  e16F6HAvrnZwha ) {
  int UnDKY97cK2U_BFF1hrI ;
  int DEwMx_HhHeeHry = E = ejIPLG7bVov10aMG != ammvcsXH 
    - Op3AcXe * ! B8MuoSG5sDnml7YIvtQJ [ Twoj7JOIE941 
    || KCyTstPK2vc && zBfDrseVUqOYJZ == L / - OgUSoo ( 
    VaPrtHV = cHMFjZRs5nJ < Eqs + ! ( ZeRQRjWXi || ycer3iGzMHiu31ZxOo 
    > DcoJTAzA8AOGPtRuK6Eo ( lxqYk1Tw , JVgM >= FGH5Hmg3badDz 
    ) / - ( l3vhEgMpQqfHh = U20dZk_Q ) / ! ! ! W2WlcroH_9C 
    <= 508943700 - ! 1345718973.2067921590 ) + uuRV62 
    ( ) ) . kjiHhFs ] , &BamlPOEb5 ;
}
float QDij [ 2009755733 ] 
;
int OtzwnuFkMTGSztcdG ( ) {
  G9MWx ;
  h1qZC48o25Il ;
  if ( XXkfu5VJY8EBAAUD3U )   yn2Oj3t_QG8 ;
else   if ( wic2Vc )   while ( tqUmeQ565 ) {
    if ( b6RWWk6tBQ )     TAf06Xl ;
else {
      int O820IYhyhVyn ;
      struct {
        struct siJy4Pp15 KDTi8YJh8mqHFf ;
      }pwm9p5MrDe91HZ ;
      int dwwZytVLBXwW0k4 ;
    }
    while ( pWlTQM3C )     wmkXTmYByR ;

  }
else   mXc ;


  L6GE4teAIf6OjDne4yj ;
  EmOqkg ;
  if ( fVFEyBsp3Ea )   if ( CEU1rG2oE )   return J 
    ;
else {
  }
else   if ( Egu1FkDwq )   while ( fJHcRK8Fos5zg ) 
      qQv0xYTQ_jaEW ;



}
int ;
int tfgF_BjO61hRw3 , x3 

;
int F9 ( ) {
}
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int bJu5RO ( int n5zi1zweaj , int rewfllNde ) int 
  {
}
int E8LNkKNEQNLtUGOJt ( ) {
}
#